--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "express": "^4.15.2",
     "font-awesome": "^4.7.0",
+    "mustache": "^2.3.0",
+    "pug": "^2.0.0-rc.1",
     "socket.io": "^1.7.3"
   }
 }
